removed gulp and gulp-livereload
added chokidar and livereload instead
(total installed packages were reduced from 349 to 19 as of 2020/4)
removed gulpfile.js and moved everything into build.js
updated w*.cmd files according to new changes
removed unused code in unwatch.cmd
some cleanup and commented info in watch.cmd

--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
-    "gulp": "latest",
-    "gulp-livereload": "latest",
+    "chokidar": "latest",
+    "livereload": "latest",
     "htmlbilder": "latest",
     "sass": "latest",
     "rtlcss": "latest"
